--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<hr>
 	<a href="r2.html">Extension List 1</a>
 
-	<a href="./r2.html">Extension List 2</a>
+	<a href="./docs/r2.html">Extension List 2</a>
 	<!-- [List](./rmd) -->
 	<a href="/r2.html">Extension List 3</a>
 	<a href="/EL/">Extension List 3</a>
