--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div>
 	<img src='Thunderbird-icon.png' style="padding-right: 60px;"/>
 
-	<h1>Thunderbird xpiLib : Extension Browser</h1>
+	<h1>Thunderbird xpiLib : Extension Browser Root index</h1>
 </div>
 	<hr>
 	<br>
