--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 ## Thunderbird Developer Tools
 [Extension List - Thunderbird 68 Compatible](extensions-all/exts-tb68-comp/extension-list-tb68.md)
+[Extension List - Thunderbird 68 Compatible](extensions-all/exts-tb68-comp/extension-list-tb68.html)
 
 
-[xpiLib Browser](https://cleidigh.github.io/ThunderKdB/xpiLib-search.html)
+[xpiLib Browser](https://cleidigh.github.io/ThunderKdB/docs/xpiLib-search.html)
 
