--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-# ![Thunderbird icon](rep-resources/Thunderbird-icon.png) ThunderKdB: xpiLib , Extensions KnowledgeBase
+<img src='Thunderbird-icon.png' style="padding-right: 60px;"/>
+
+<h1>ThunderKdB xpiLib</h1>
 
 
-## Thunderbird Developer Tools
-[Extension List - Thunderbird 68 Compatible](extensions-all/exts-tb68-comp/extension-list-tb68.md)
-[Extension List - Thunderbird 68 Compatible](extensions-all/exts-tb68-comp/extension-list-tb68.html)
-
-
-[xpiLib Browser](https://cleidigh.github.io/ThunderKdB/docs/xpiLib-search.html)
-[xpiLib Browser](./docs/xpiLib-search.html)
+<a href="../index.html">Index route</a><br>
+<a href="./extensions-all/exts-tb68-comp/extension-list-tb68.html">Extension List main rep</a>>Extension List 3</a><br>
 
