--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src='Thunderbird-icon.png' style="padding-right: 60px;"/>
+<img src='./rep-resources/Thunderbird-icon.png' style="padding-right: 60px;"/>
 
 <h1>ThunderKdB xpiLib</h1>
 
