--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 
 
 <a href="../index.html">Index route</a><br>
-<a href="../test_css1.html">TestCss 1</a><br>
+<a href="./docs/test_css1.html">TestCss 1</a><br>
 <a href="./extensions-all/exts-tb68-comp/extension-list-tb68.html">Extension List main rep</a>>Extension List 3</a><br>
 
