--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}" />
 <img src='./rep-resources/Thunderbird-icon.png' style="padding-right: 60px;"/>
 
 <h1>ThunderKdB xpiLib</h1>
 
+<div class="test1">TestText</div>
 
 <a href="../index.html">Index route</a><br>
 <a href="./docs/test_css1.html">TestCss 1</a><br>
