--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}" />
+<link rel="stylesheet" href="{{ '/docs/css/main.css' | relative_url }}" />
 <img src='./rep-resources/Thunderbird-icon.png' style="padding-right: 60px;"/>
 
 <h1>ThunderKdB xpiLib</h1>
