--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="{{ './docs/css/main.css' | relative_url }}" />
 <img src='./rep-resources/Thunderbird-icon.png' style="padding-right: 60px;"/>
 
-<h1>ThunderKdB xpiLib</h1>
+<h1>ThunderKdB xpiLib 1</h1>
 
 <div class="test1">TestText</div>
 
