--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <link rel="stylesheet" href="{{ './docs/css/main.css' | relative_url }}" />
+<link rel="stylesheet" href="./docs/css/main.css" />
 <img src='./rep-resources/Thunderbird-icon.png' style="padding-right: 60px;"/>
 
-<h1>ThunderKdB xpiLib 1</h1>
+<h1>ThunderKdB xpiLib 2</h1>
 
 <div class="test1">TestText</div>
 
-<a href="../index.html">Index route</a><br>
+<a href="./docs/xpiLib-search.html">xpiLib-search</a><br>
 <a href="./docs/test_css1.html">TestCss 1</a><br>
 <a href="./extensions-all/exts-tb68-comp/extension-list-tb68.html">Extension List main rep</a>>Extension List 3</a><br>
 
