--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="{{ './docs/css/main.css' | relative_url }}" />
+<link rel="stylesheet" href="{{ '/css/site.css' | relative_url }}" />
 <link rel="stylesheet" href="./docs/css/main.css" />
 <img src='./rep-resources/Thunderbird-icon.png' style="padding-right: 60px;"/>
 
-<h1>ThunderKdB xpiLib 3</h1>
+<h1>ThunderKdB xpiLib 4</h1>
 
 <div class="test2">TestText</div>
 
