--- a/index.html
+++ b/index.html
@@ -9,13 +9,35 @@ body {
 
 <link rel="stylesheet" href="{{ '/css/site.css' | relative_url }}" />
 <link rel="stylesheet" href="./docs/css/main.css" />
-<img src='./rep-resources/Thunderbird-icon.png' style="padding-right: 60px;"/>
+<link rel="stylesheet" href="./docs/css/xpi-search.css" />
 
-<h1>ThunderKdB xpiLib 5</h1>
+<div class="search-banner">	
+	<img class="banner-image" src='./docs/images/Thunderbird-Banner.png'
+		style="padding-right: 60px; height: 40px; width: 170px" />
+	<label class="banner-header">ThunderKdB: Extension Developer Resources</label>
+	<label class="banner-header-rt">2019-09-24</label>
+</div>
 
-<div class="test3">TestText</div>
+<hr>
+<br>
+<br>
+<h2 class="search-section1">Extension Statistics & Reports:</h2>
 
-<a href="./docs/xpiLib-search.html">xpiLib-search</a><br>
-<a href="./docs/test_css1.html">TestCss 1</a><br>
-<a href="./extensions-all/exts-tb68-comp/extension-list-tb68.html">Extension List main rep</a>>Extension List 3</a><br>
+<div class="index-links-block">
+<a class="index-links" href="./extensions-all/exts-tb68-comp/extension-list-tb68.html">Extensions: All </a><br>
+<a class="index-links" href="./extensions-all/exts-tb68-comp/extension-list-tb68.html">Extensions: Thunderbird 68 Compatible </a><br>
+<a class="index-links" href="./extensions-all/exts-tb68-comp/extension-list-tb68.html">Extensions: Thunderbird 60 Compatible </a><br>
+<a class="index-links" href="./extensions-all/exts-tb68-comp/extension-list-tb68.html">Extensions: Recent Activity </a><br>
+</div>
+<br>
 
+<h2 class="search-section1">xpiLib Extension Browser:</h2>
+<div class="index-links-block">
+<a class="index-links" href="./docs/xpiLib-search.html">xpiLib</a><br>
+</div>
+
+<br>
+<h2 class="search-section1">Extension Development Documentation:</h2>
+<div class="index-links-block">
+<a class="index-links" href="./docs/xpiLib-search.html">Thunderbird Developer Network</a><br>
+</div>
