--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@ body {
 
 <h2 class="search-section1">xpiLib Extension Browser:</h2>
 <div class="index-links-block">
-<a class="index-links" href="./docs/xpiLib-search.html">xpiLib</a><br>
+<a class="index-links" href="./docs/xpiLib-search.html">xpiLib Search</a><br>
+<a class="index-links" href="./xall/">Code Library</a><br>
 </div>
 
 <br>
 <h2 class="search-section1">Extension Development Documentation:</h2>
 <div class="index-links-block">
-<a class="index-links" href="./docs/xpiLib-search.html">Thunderbird Developer Network</a><br>
+<a class="index-links" href="https://developer.thunderbird.net">Thunderbird Developer Network</a><br>
 </div>
