--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
 <h2 class="search-section1">xpiLib Extension Browser:</h2>
 <div class="index-links-block">
 <a class="index-links" href="./docs/xpiLib-search.html">xpiLib Search</a><br>
-<a class="index-links" href="./xall/">Code Library</a><br>
+<a class="index-links" href="https://github.com/cleidigh/ThunderKdB/tree/master/xall">Code Library</a><br>
 </div>
 
 <br>
