--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ body {
 <div class="index-links-block">
 <a class="index-links" href="./docs/xpiLib-search.html">xpiLib Search</a><br>
 <a class="index-links" href="https://github.com/cleidigh/ThunderKdB/tree/master/xall">Code Library</a><br>
+<a class="index-links" href="./docs/test-page.html">TestPage</a><br>
 </div>
 
 <br>
