--- a/xall/x68/634298-cardbook/634298-cardbook-details.html
+++ b/xall/x68/634298-cardbook/634298-cardbook-details.html
@@ -10,14 +10,14 @@
 			font-family: 'Roboto';
 		}
 	</style>
-	<link rel="stylesheet" href="./css/ext-details.css" />
-	<link rel="stylesheet" href="./css/gh-buttons.css" />
+	<link rel="stylesheet" href="/ThunderKdB/docs/css/ext-details.css" />
+	<link rel="stylesheet" href="/ThunderKdB/docs/css/gh-buttons.css" />
 </head>
 
 <body>
 
 	<div class="search-banner">
-		<img class="banner-image" src='./images/Thunderbird-Banner.png'
+		<img class="banner-image" src='/ThunderKdB/docs/images/Thunderbird-Banner.png'
 			style="padding-right: 60px; height: 40px; width: 170px" />
 		<label class="banner-header">Extension Details</label>
 		<label class="banner-header-rt"></label>
@@ -29,9 +29,9 @@
 	<!-- src='https://addons.thunderbird.net/user-media/addon_icons/634/634298-64.png?modified=mcrushed'  -->
 
 	<div class="details-body">
-		<img class="ext-details-image" src="./images/import-export-tools-ng-icon-64px.png" />
+		<img class="ext-details-image" src="__ext-icon64px-path__" />
 
-		<label class="ext-header">CardBook v4.0.4 2019-08-20</label>
+		<label class="ext-header">CardBook</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -102,33 +102,33 @@ Twitter: <a href="https://twitter.com/CardBookAddon" rel="nofollow">@CardBookAdd
 
 			</table>
 		</div>
-			<h2 class="ext-details-section-header">Core Files :</h2>
-			<div class="ext-details-section">
+		<h2 class="ext-details-section-header">Core Files :</h2>
+		<div class="ext-details-section">
 
-					<table width="100%" class="ext-details-table">
-						<tr>
-							<td width="145px"><label class="ext-details-item-label">Source Tree</label>
-							<a class="ext-file-link" href="634298-cardbook/src)">Source Tree</a>
-							</td>
-							<td width="900px"><label class="ext-details-item"></label></td>
-						</tr>
-						<tr>
-							<td width="145px"><label class="ext-details-item-label">manifest.json</label></td>
-							<td width="900px"><label class="ext-details-item"></label></td>
-						</tr>
-						<tr>
-							<td width="145px"><label class="ext-details-item-label">install.rdf</label></td>
-							<td width="900px"><label class="ext-details-item"></label>(manifest.json) </td>
-						</tr>
-						<tr>
-							<td width="145px"><label class="ext-details-item-label">XPI</label></td>
-							<td width="900px"><label class="ext-details-item"></label></td>
-						</tr>
-		
-					</table>
-		
-			</div>
-			<h2 class="ext-details-section-header">Versions :</h2>
+			<table width="100%" class="ext-details-table">
+				<tr>
+					<td width="145px"><label class="ext-details-item-label">Source Tree</label>
+						<a class="ext-file-link" href="634298-cardbook/src)">Source Tree</a>
+					</td>
+					<td width="900px"><label class="ext-details-item"></label></td>
+				</tr>
+				<tr>
+					<td width="145px"><label class="ext-details-item-label">manifest.json</label></td>
+					<td width="900px"><label class="ext-details-item"></label></td>
+				</tr>
+				<tr>
+					<td width="145px"><label class="ext-details-item-label">install.rdf</label></td>
+					<td width="900px"><label class="ext-details-item"></label>(manifest.json) </td>
+				</tr>
+				<tr>
+					<td width="145px"><label class="ext-details-item-label">XPI</label></td>
+					<td width="900px"><label class="ext-details-item"></label></td>
+				</tr>
+
+			</table>
+
+		</div>
+		<h2 class="ext-details-section-header">Versions :</h2>
 
 
 </body>
