--- a/scripts/extension-details-templ.html
+++ b/scripts/extension-details-templ.html
@@ -10,14 +10,14 @@
 			font-family: 'Roboto';
 		}
 	</style>
-	<link rel="stylesheet" href="./css/ext-details.css" />
-	<link rel="stylesheet" href="./css/gh-buttons.css" />
+	<link rel="stylesheet" href="/ThunderKdB/docs/css/ext-details.css" />
+	<link rel="stylesheet" href="/ThunderKdB/docs/css/gh-buttons.css" />
 </head>
 
 <body>
 
 	<div class="search-banner">
-		<img class="banner-image" src='./images/Thunderbird-Banner.png'
+		<img class="banner-image" src='/ThunderKdB/docs/images/Thunderbird-Banner.png'
 			style="padding-right: 60px; height: 40px; width: 170px" />
 		<label class="banner-header">Extension Details</label>
 		<label class="banner-header-rt"></label>
@@ -29,9 +29,9 @@
 	<!-- src='__ext-icon64px-path__'  -->
 
 	<div class="details-body">
-		<img class="ext-details-image" src="./images/import-export-tools-ng-icon-64px.png" />
+		<img class="ext-details-image" src="__ext-icon64px-path__" />
 
-		<label class="ext-header">__ext-name__ v4.0.4 2019-08-20</label>
+		<label class="ext-header">__ext-name__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
