--- a/scripts/extension-details-templ.html
+++ b/scripts/extension-details-templ.html
@@ -20,13 +20,11 @@
 		<img class="banner-image" src='/ThunderKdB/docs/images/Thunderbird-Banner.png'
 			style="padding-right: 60px; height: 40px; width: 170px" />
 		<label class="banner-header">Extension Details</label>
-		<label class="banner-header-rt"></label>
+		<label class="banner-header-rt">__date__</label>
 	</div>
 
 	<hr>
 	<br>
-
-	<!-- src='__ext-icon64px-path__'  -->
 
 	<div class="details-body">
 		<img class="ext-details-image" src="__ext-icon64px-path__" />
@@ -104,22 +102,22 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Source Tree</label>
+					<td width="220px"><label class="ext-details-item-label">Source Tree</label>
 						<a class="ext-file-link" href="__ext-src-path__">Source Tree</a>
 					</td>
-					<td width="900px"><label class="ext-details-item"></label></td>
+					<td width="600px"><label class="ext-details-item"></label></td>
 				</tr>
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">manifest.json</label></td>
-					<td width="900px"><label class="ext-details-item"></label></td>
+					<td width="220px"><label class="ext-details-item-label">manifest.json</label></td>
+					<td width="600px"><label class="ext-details-item"></label></td>
 				</tr>
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">install.rdf</label></td>
-					<td width="900px"><label class="ext-details-item"></label>(manifest.json) </td>
+					<td width="220px"><label class="ext-details-item-label">install.rdf</label></td>
+					<td width="600px"><label class="ext-details-item"></label>(manifest.json) </td>
 				</tr>
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">XPI</label></td>
-					<td width="900px"><label class="ext-details-item"></label></td>
+					<td width="220px"><label class="ext-details-item-label">XPI</label></td>
+					<td width="600px"><label class="ext-details-item"></label></td>
 				</tr>
 
 			</table>
