--- a/xall/x68/640-quicktext/640-quicktext-details.html
+++ b/xall/x68/640-quicktext/640-quicktext-details.html
@@ -20,16 +20,14 @@
 		<img class="banner-image" src='/ThunderKdB/docs/images/Thunderbird-Banner.png'
 			style="padding-right: 60px; height: 40px; width: 170px" />
 		<label class="banner-header">Extension Details</label>
-		<label class="banner-header-rt"></label>
+		<label class="banner-header-rt">2019-10-07</label>
 	</div>
 
 	<hr>
 	<br>
 
-	<!-- src='https://addons.thunderbird.net/user-media/addon_icons/0/640-64.png?modified=1562617769'  -->
-
 	<div class="details-body">
-		<img class="ext-details-image" src="__ext-icon64px-path__" />
+		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/0/640-64.png?modified=1562617769" />
 
 		<label class="ext-header">Quicktext</label>
 		<br>
@@ -105,22 +103,22 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Source Tree</label>
+					<td width="220px"><label class="ext-details-item-label">Source Tree</label>
 						<a class="ext-file-link" href="640-quicktext/src)">Source Tree</a>
 					</td>
-					<td width="900px"><label class="ext-details-item"></label></td>
+					<td width="600px"><label class="ext-details-item"></label></td>
 				</tr>
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">manifest.json</label></td>
-					<td width="900px"><label class="ext-details-item"></label></td>
+					<td width="220px"><label class="ext-details-item-label">manifest.json</label></td>
+					<td width="600px"><label class="ext-details-item"></label></td>
 				</tr>
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">install.rdf</label></td>
-					<td width="900px"><label class="ext-details-item"></label>(manifest.json) </td>
+					<td width="220px"><label class="ext-details-item-label">install.rdf</label></td>
+					<td width="600px"><label class="ext-details-item"></label>(manifest.json) </td>
 				</tr>
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">XPI</label></td>
-					<td width="900px"><label class="ext-details-item"></label></td>
+					<td width="220px"><label class="ext-details-item-label">XPI</label></td>
+					<td width="600px"><label class="ext-details-item"></label></td>
 				</tr>
 
 			</table>
