--- a/xall/x68/2313-lightning/2313-lightning-details.html
+++ b/xall/x68/2313-lightning/2313-lightning-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/2/2313-64.png?modified=mcrushed" />
 
-		<label class="ext-header">Lightning</label>
+		<label class="ext-header">Lightning&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -38,7 +38,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Description :</label></td>
+					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">Organize your schedule and life's important events in a calendar that's fully integrated with your Thunderbird email.  Manage multiple calendars, create your daily to do list, invite friends to events, and subscribe to public calendars.
 </label></td>
 				</tr>
