--- a/xall/x68/711780-lookout-fix-version/711780-lookout-fix-version-details.html
+++ b/xall/x68/711780-lookout-fix-version/711780-lookout-fix-version-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/711/711780-64.png?modified=ebeaf2a5" />
 
-		<label class="ext-header">LookOut (fix version)</label>
+		<label class="ext-header">LookOut (fix version)&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -38,7 +38,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Description :</label></td>
+					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">LookOut is a plugin which allows Thunderbird to interface with Microsoft's mail tools by decoding metadata and attachments encapsulated/embedded in a TNEF encoded attachment (aka winmail.dat).
 Support: Thunderbird and SeaMonkey
 </label></td>
