--- a/xall/x68/13564-compactheader/13564-compactheader-details.html
+++ b/xall/x68/13564-compactheader/13564-compactheader-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/13/13564-64.png?modified=mcrushed" />
 
-		<label class="ext-header">CompactHeader</label>
+		<label class="ext-header">CompactHeader&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -38,7 +38,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Description :</label></td>
+					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">Add symbol in header plane to switch between compact and expanded view. New beta versions for the current beta of Thunderbird 68.0 can be found at <a href="https://github.com/jmozmoz/compactheader/" rel="nofollow">https://github.com/jmozmoz/compactheader/</a>
 </label></td>
 				</tr>
