--- a/xall/x68/195275-send-later-3/195275-send-later-3-details.html
+++ b/xall/x68/195275-send-later-3/195275-send-later-3-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/195/195275-64.png?modified=1568122565" />
 
-		<label class="ext-header">Send Later</label>
+		<label class="ext-header">Send Later&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -38,7 +38,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Description :</label></td>
+					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">True "Send Later" functionality to schedule the time for sending an email.
 </label></td>
 				</tr>
