--- a/xall/x68/4631-provider-for-google-calendar/4631-provider-for-google-calendar-details.html
+++ b/xall/x68/4631-provider-for-google-calendar/4631-provider-for-google-calendar-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/4/4631-64.png?modified=75868503" />
 
-		<label class="ext-header">Provider for Google Calendar</label>
+		<label class="ext-header">Provider for Google Calendar&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -38,7 +38,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Description :</label></td>
+					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">Allows bidirectional access to Google Calendar
 </label></td>
 				</tr>
