--- a/xall/x68/47144-mail-merge/47144-mail-merge-details.html
+++ b/xall/x68/47144-mail-merge/47144-mail-merge-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/47/47144-64.png?modified=88544e5d" />
 
-		<label class="ext-header">Mail Merge</label>
+		<label class="ext-header">Mail Merge&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -38,7 +38,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Description :</label></td>
+					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">Create and Save or Send Multiple Individual and Personalized Messages from a Draft
 </label></td>
 				</tr>
