--- a/xall/x68/550-mailredirect/550-mailredirect-details.html
+++ b/xall/x68/550-mailredirect/550-mailredirect-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/0/550-64.png?modified=mcrushed" />
 
-		<label class="ext-header">Mail Redirect</label>
+		<label class="ext-header">Mail Redirect&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -38,7 +38,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Description :</label></td>
+					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">Allow to redirect (a.k.a. "remail") mail messages to other recipients.
 </label></td>
 				</tr>
