--- a/xall/x68/611-signature-switch/611-signature-switch-details.html
+++ b/xall/x68/611-signature-switch/611-signature-switch-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/0/611-64.png?modified=1533678238" />
 
-		<label class="ext-header">Signature Switch</label>
+		<label class="ext-header">Signature Switch&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -38,7 +38,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Description :</label></td>
+					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">Switch the signature on/off or choose a new one from your predefined set.
 </label></td>
 				</tr>
