--- a/xall/x68/640-quicktext/640-quicktext-details.html
+++ b/xall/x68/640-quicktext/640-quicktext-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/0/640-64.png?modified=1562617769" />
 
-		<label class="ext-header">Quicktext</label>
+		<label class="ext-header">Quicktext&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -38,7 +38,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="145px"><label class="ext-details-item-label">Description :</label></td>
+					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">Quicktext is an extension for Thunderbird that lets you create templates that can be easily inserted into your own emails.
 </label></td>
 				</tr>
