--- a/xall/x68/550-mailredirect/550-mailredirect-details.html
+++ b/xall/x68/550-mailredirect/550-mailredirect-details.html
@@ -104,7 +104,7 @@
 			<table width="100%" class="ext-details-table">
 				<tr>
 					<td width="220px"><label class="ext-details-item-label">Source Tree</label>
-						<a class="ext-file-link" href="550-mailredirect/src)">Source Tree</a>
+						<a class="ext-file-link" href="https://github.com/cleidigh/ThunderKdB/xall/x68/550-mailredirect/src)">Source Tree</a>
 					</td>
 					<td width="600px"><label class="ext-details-item"></label></td>
 				</tr>
