--- a/xall/x68/634298-cardbook/634298-cardbook-details.html
+++ b/xall/x68/634298-cardbook/634298-cardbook-details.html
@@ -106,7 +106,7 @@ Twitter: <a href="https://twitter.com/CardBookAddon" rel="nofollow">@CardBookAdd
 			<table width="100%" class="ext-details-table">
 				<tr>
 					<td width="220px"><label class="ext-details-item-label">Source Tree</label>
-						<a class="ext-file-link" href="634298-cardbook/src)">Source Tree</a>
+						<a class="ext-file-link" href="https://github.com/cleidigh/ThunderKdB/xall/x68/634298-cardbook/src)">Source Tree</a>
 					</td>
 					<td width="600px"><label class="ext-details-item"></label></td>
 				</tr>
