--- a/xall/x68/711780-lookout-fix-version/711780-lookout-fix-version-details.html
+++ b/xall/x68/711780-lookout-fix-version/711780-lookout-fix-version-details.html
@@ -105,7 +105,7 @@ Support: Thunderbird and SeaMonkey
 			<table width="100%" class="ext-details-table">
 				<tr>
 					<td width="220px"><label class="ext-details-item-label">Source Tree</label>
-						<a class="ext-file-link" href="711780-lookout-fix-version/src)">Source Tree</a>
+						<a class="ext-file-link" href="https://github.com/cleidigh/ThunderKdB/xall/x68/711780-lookout-fix-version/src)">Source Tree</a>
 					</td>
 					<td width="600px"><label class="ext-details-item"></label></td>
 				</tr>
