--- a/scripts/extension-details-templ.html
+++ b/scripts/extension-details-templ.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="__ext-icon64px-path__" />
 
-		<label class="ext-header">__ext-name__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-version-date__</label>
+		<label class="ext-header">__ext-name__&nbsp;&nbsp;&nbsp;&nbsp;__ext-current-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-current-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -37,7 +37,7 @@
 		<div class="ext-details-section">
 
 			<table width="100%" class="ext-details-table">
-				<tr>
+				<tr style="padding-bottom: 12px;">
 					<td width="145px" style="vertical-align: top; padding-bottom: 10px;"><label class="ext-details-item-label">Description :</label></td>
 					<td width="900px"><label class="ext-details-item">__ext-description__</label></td>
 				</tr>
