--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ body {
 
 <div class="index-links-block">
 <a class="index-links" href="./xall/extension-list-all.html">Summary (tbd)</a><br>
-<a class="index-links" href="./xall/extension-list-all.html">All </a><br>
+<a class="index-links" href="./xall/extension-list-all.html">All Extensions</a><br>
 <a class="index-links" href="./xall/x68/extension-list-tb68.html">Thunderbird 68 Compatible </a><br>
-<a class="index-links" href="./xall/x60/extension-list-tb60.html">Thunderbird 60(!68) Compatible </a><br>
+<a class="index-links" href="./xall/x60/extension-list-tb60.html">Thunderbird 60 ( !68 ) Compatible </a><br>
 <a class="index-links" href="./xall/x60/extension-list-tb60all.html">Thunderbird 60 Compatible </a><br>
 <a class="index-links" href="./extensions-all/exts-tb68-comp/extension-list-tb68.html">Extensions: Recent Activity (tbd)</a><br>
 </div>
