--- a/scripts/extension-details-templ.html
+++ b/scripts/extension-details-templ.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="__ext-icon64px-path__" />
 
-		<label class="ext-header">__ext-name__&nbsp;&nbsp;&nbsp;&nbsp;__ext-current-version__&nbsp;&nbsp;&nbsp;&nbsp;__ext-current-version-date__</label>
+		<label class="ext-header">__ext-name__&nbsp;&nbsp;&nbsp;&nbsp;Version : __ext-current-version__&nbsp;&nbsp;-&nbsp;&nbsp;__ext-current-version-date__</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -92,7 +92,7 @@
 				</tr>
 				<tr>
 					<td width="145px"><label class="ext-details-item-label">Legacy Type :</label></td>
-					<td width="900px"><label class="ext-details-item">restart</label></td>
+					<td width="900px"><label class="ext-details-item"></label></td>
 				</tr>
 
 			</table>
@@ -102,7 +102,7 @@
 
 			<table width="100%" class="ext-details-table">
 				<tr>
-					<td width="220px"><label class="ext-details-item-label">Source Tree</label>
+					<td width="220px">
 						<a class="ext-file-link" href="__ext-src-path__">Source Tree</a>
 					</td>
 					<td width="600px"><label class="ext-details-item"></label></td>
