add temporary legend

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
 <h2 class="search-section1">Extension Statistics & Reports:</h2>
 
 <div class="index-links-block">
-<a class="index-links" href="./xall/extension-list-all.html">Summary (tbd)</a><br>
+<a class="index-links" href="./docs/reports-legend.html">Reports Legend/Notes (wip)</a><br>
 <a class="index-links" href="./xall/extension-list-all.html">All Extensions</a><br>
 <a class="index-links" href="./xall/x68/extension-list-tb68.html">Thunderbird 68 Compatible </a><br>
 <a class="index-links" href="./xall/x60/extension-list-tb60.html">Thunderbird 60 ( !68 ) Compatible </a><br>
