--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ body {
 <div class="index-links-block">
 <a class="index-links" href="./docs/xpiLib-search.html">xpiLib Search</a><br>
 <a class="index-links" href="https://github.com/cleidigh/ThunderKdB/tree/master/xall">Code Library</a><br>
+<a class="index-links" href="https://github.com/cleidigh/ThunderKdB/issues">Issues/Tips/Comments</a><br>
+
 <!-- <a class="index-links" href="./docs/test-page.html">TestPage</a><br> -->
 <br>
 <label class="index-links">Note: Multi-License Repository - Please respect individual licensing</label>
