--- a/xall/x68/59195-g-hub-lite_google-tabs/src/chrome/content/G-Hub_Lite_Launcher.html
+++ b/xall/x68/59195-g-hub-lite_google-tabs/src/chrome/content/G-Hub_Lite_Launcher.html
@@ -114,21 +114,21 @@
   	<div class="ghublite_section">
   		<div class="ghublite_section_title">Google Services</div>
   		
-  		<div class="ghublite_section_line"><a id="google_calendar_link"><img src="img/google_calendar_logo_large.png" alt="" /> Calendar</a></div>
-  		<div class="ghublite_section_line"><a id="google_contacts_link"><img src="img/google_contacts_logo_large.png" alt="" /> Contacts</a></div>
-  		<div class="ghublite_section_line"><a id="google_docs_link"><img src="img/google_doc_large.png" alt="" /> Docs</a></div>
-  		<div class="ghublite_section_line"><a id="google_drive_link"><img src="img/google_drive_logo_large.png" alt="" /> Drive</a></div>
-  		<div class="ghublite_section_line"><a id="google_maps_link"><img src="img/google_maps_logo_large.png" alt="" /> Maps</a></div>
-  		<div class="ghublite_section_line"><a id="google_search_link"><img src="img/google_search_logo_large.png" alt="" /> Search</a></div>
-  		<div class="ghublite_section_line"><a id="google_sheets_link"><img src="img/google_xls_large.png" alt="" /> Sheets</a></div>
-  		<div class="ghublite_section_line"><a id="google_slides_link"><img src="img/google_ppt_large.png" alt="" /> Slides</a></div>
-  		<div class="ghublite_section_line"><a id="google_voice_link"><img src="img/google_voice_logo_large.png" alt="" /> Voice</a></div>
+  		<div class="ghublite_section_line"><a id="google_calendar_link"><img src="img/google_calendar_logo.png" alt="" /> Calendar</a></div>
+  		<div class="ghublite_section_line"><a id="google_contacts_link"><img src="img/google_contacts_logo.png" alt="" /> Contacts</a></div>
+  		<div class="ghublite_section_line"><a id="google_docs_link"><img src="img/google_doc.png" alt="" /> Docs</a></div>
+  		<div class="ghublite_section_line"><a id="google_drive_link"><img src="img/google_drive_logo.png" alt="" /> Drive</a></div>
+  		<div class="ghublite_section_line"><a id="google_maps_link"><img src="img/google_maps_logo.png" alt="" /> Maps</a></div>
+  		<div class="ghublite_section_line"><a id="google_search_link"><img src="img/google_search_logo.png" alt="" /> Search</a></div>
+  		<div class="ghublite_section_line"><a id="google_sheets_link"><img src="img/google_xls.png" alt="" /> Sheets</a></div>
+  		<div class="ghublite_section_line"><a id="google_slides_link"><img src="img/google_ppt.png" alt="" /> Slides</a></div>
+  		<div class="ghublite_section_line"><a id="google_voice_link"><img src="img/google_voice_logo.png" alt="" /> Voice</a></div>
   	</div>
   	
   	<div class="ghublite_section">
   		<div class="ghublite_section_title">Settings</div>
-  		<div class="ghublite_section_line"><a id="ghublite_googleAddAccountURL"><img src="img/google_addaccount_large.png" alt="" /> Add Google Account</a></div>
-  		<div class="ghublite_section_line"><a id="ghublite_googleLogoutURL"><img src="img/google_logout_logo_large.png" alt="" /> Logout</a></div>
+  		<div class="ghublite_section_line"><a id="ghublite_googleAddAccountURL"><img src="img/google_addaccount.png" alt="" /> Add Google Account</a></div>
+  		<div class="ghublite_section_line"><a id="ghublite_googleLogoutURL"><img src="img/google_logout_logo.png" alt="" /> Logout of Google</a></div>
   		<div class="ghublite_section_line"><a id="ghublite_optionsURL"><img src="img/ghub-logo.png" alt="" /> G-Hub Options</a></div>		
   	</div>
   	
