--- a/xall/x68/59195-g-hub-lite_google-tabs/src/chrome/content/options_lite.html
+++ b/xall/x68/59195-g-hub-lite_google-tabs/src/chrome/content/options_lite.html
@@ -23,10 +23,11 @@
 <center><img src="img/ghub-logo.png" style="width: 250px; height: 250px; margin: 0 auto;" /></center>
 <br/>
 <div style="width: 75%; margin: 0 auto;">
-To unlock the ability to customize each service link and to add support for many more Google services, <a href="http://www.schiffner.com/index.php/software/g-hub-pro/">Go Pro!</a>
-<br/><br/>By upgrading to <a href="http://www.schiffner.com/index.php/software/g-hub-pro/">G-Hub Pro</a> you can modify the url of each individual service.
-<br/>This adds a level of individual customization and enables use of employer Google Apps subscriptions!
-<br/><br/><a href="http://www.schiffner.com/index.php/software/g-hub-pro/">G-Hub Pro</a> also includes tabs for many more Google services and 6 'custom link' tabs.
+To unlock the ability to customize each service Google link and to add support for many more Google services, <a href="http://www.schiffner.com/index.php/software/g-hub-pro/">Go Pro!</a>
+<br/><br/>By upgrading to <a href="http://www.schiffner.com/index.php/software/g-hub-pro/">G-Hub Pro</a> you can <u>customize the url of each individual Google service</u>, letting you use G-Hub with your G-Suite subscription!
+<br/><br/><u><a href="http://www.schiffner.com/index.php/software/g-hub-pro/">G-Hub Pro</a> lets you customize which Google services appear in the toolbar drop-down menu</u>. This means you can show only the Google services you use in the menu. Less clutter and more productivity!
+<br/><br/><a href="http://www.schiffner.com/index.php/software/g-hub-pro/">G-Hub Pro</a> includes 6 'custom link' tabs. Both the custom link title and the URL can be fully customized in G-Hub Pro.
+
 <br/><br/>
 <table style="width:65%; max-width: 450px; min-width: 300px; border: none; margin: 0 auto;">
 <tbody><tr>
