--- a/xall/x68/987823-autobucket/src/options/options.html
+++ b/xall/x68/987823-autobucket/src/options/options.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>vue-testext - Options</title>
+    <title>AutoBucket - Options</title>
     <link rel="stylesheet" href="options.css" />
     
   </head>
