--- a/xall/x68/987816-transliterussian/src/popup_newmessage.html
+++ b/xall/x68/987816-transliterussian/src/popup_newmessage.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-<div id='header'> TRANSLITERUSSIAN 0.2 beta for Thunderbird</div></div>
+<div id='header'> TRANSLITERUSSIAN 0.3 beta for Thunderbird</div>
 
 <div id='content'><textarea id='transliterussian' autofocus rows="14" cols="64" style="font-size:19px;"></textarea></div>
 
-<button id="button_newmessage">Einfügen in die neue E-Mail ...</button> <br />
+<button id="button_newmessage">Einfügen in die neue E-Mail ...</button><br />
 <div id='footer'><a title="Copyright" href="mailto:it@koutsenok.de">Vlad Koutsenok</a></div>
 
 </body>
