--- a/xall/x68/986655-framewhite/src/popup.html
+++ b/xall/x68/986655-framewhite/src/popup.html
@@ -22,9 +22,25 @@
     #formOne:active {
         background-color:navy;
 }
+    #formTwo {
+        background-color:red;
+        color:white;
+        font-weight: bold;
+        width: 300px;
+        text-align: center;
+        font: 17px sans-serif;
+        padding: 10px; 
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+    #formTwo:active {
+        background-color:#850101;
+}
 </style>
 </head>
 <form id="formOne">Enable white theme</form>
+<form id="formTwo">Disable white theme</form>
 <script language="javascript" src="code.js"></script>
 </body>
 </html>
