--- a/xall/x68/987665-oppositetodaysubpane/src/popup.html
+++ b/xall/x68/987665-oppositetodaysubpane/src/popup.html
@@ -2,14 +2,14 @@
 
 <head>
 <title>OppositeTodaySubpane</title>
-<meta charset="UTF-8"/> 
+<meta charset="UTF-8"/>
+<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'  https://developer.mozillar.org/*"/> 
 <base target="_top"/> 
 <link rel="manifest" href="/manifest.json"/>
 <style>
-    #form1 {
+    #formOne {
         background-color:blue;
         color:yellow;
-        font-weight: bold;
         width: 450px;
         text-align: center;
         font-size: 17px;
@@ -18,26 +18,24 @@
         left: 0;
         right: 0;
     }
-    #form1:active {
+    #formOne:active {
         background-color:navy;
 }
-    #form2 {
+    #formTwo {
         background-color:red;
         color:yellow;
-        font-weight: bold;
         width: 450px;
         text-align: center;
         font-size: 17px ;
         padding: 7px; 
         bottom: 0;
     }
-    #form2:active {
+    #formTwo:active {
         background-color:#800000;
 }
-    #form3 {
+    #formThree {
         background-color:green;
         color:yellow;
-        font-weight: bold;
         width: 450px;
         text-align: center;
         font-size: 17px ;
@@ -45,32 +43,28 @@
         left: 0;
         right: 0;
     }
-    #form3:active {
+    #formThree:active {
        background-color:#003300;
 }
-    #form4 {
+    #formFour {
         background-color:red;
         color:yellow;
-        font-weight: bold;
         width: 450px;
         text-align: center;
         font-size: 17px ;
         padding: 7px; 
         bottom: 0;
     }
-    #form4:active {
+    #formFour:active {
         background-color:#800000;
 }
 </style>
   </head>
 <body>
-<form id="form1" action="https://www.thunderbird.net/en-US/" method="get">append today subpane to opposite, left</form>
-<form id="form2" action="https://www.thunderbird.net/en-US/" method="get">[Warning] remove today subpane on opposite, left</form> 
-<form id="form3" action="https://www.thunderbird.net/en-US/" method="get">append today subpane to opposite, bottom</form>
-<form id="form4" action="https://www.thunderbird.net/en-US/" method="get">[Warning] remove today subpane on opposite, bottom</form>
-<script language="javascript" src="form1.js"></script>
-<script language="javascript" src="form2.js"></script>
-<script language="javascript" src="form3.js"></script>
-<script language="javascript" src="form4.js"></script>
+<form id="formOne">append today subpane to opposite, left</form>
+<form id="formTwo">[Warning] remove today subpane on opposite, left</form> 
+<form id="formThree">append today subpane to opposite, bottom</form>
+<form id="formFour">[Warning] remove today subpane on opposite, bottom</form>
+<script language="javascript" src="code.js"></script>
 </body>
 </html>
