--- a/xall/x68/987706-g-suite-in-tab/987706-g-suite-in-tab-details.html
+++ b/xall/x68/987706-g-suite-in-tab/987706-g-suite-in-tab-details.html
@@ -29,7 +29,7 @@
 	<div class="details-body">
 		<img class="ext-details-image" src="https://addons.thunderbird.net/user-media/addon_icons/987/987706-64.png?modified=6a36c8bc" />
 
-		<label class="ext-header">G Suite in tab&nbsp;&nbsp;&nbsp;&nbsp;Version : 0.2.0&nbsp;&nbsp;-&nbsp;&nbsp;2019-10-15</label>
+		<label class="ext-header">G Suite in tab&nbsp;&nbsp;&nbsp;&nbsp;Version : 0.3.0&nbsp;&nbsp;-&nbsp;&nbsp;2020-11-02</label>
 		<br>
 
 		<h2 class="ext-details-section-header">Summary:</h2>
@@ -81,11 +81,11 @@
 			<table width="100%" class="ext-details-table">
 				<tr>
 					<td width="145px"><label class="ext-details-item-label">Min V :</label></td>
-					<td width="900px"><label class="ext-details-item">66.0</label></td>
+					<td width="900px"><label class="ext-details-item">78.0</label></td>
 				</tr>
 				<tr>
 					<td width="145px"><label class="ext-details-item-label">Max V :</label></td>
-					<td width="900px"><label class="ext-details-item">73.0</label></td>
+					<td width="900px"><label class="ext-details-item">*</label></td>
 				</tr>
 				<tr>
 					<td width="145px"><label class="ext-details-item-label">MailExtension :</label></td>
